# pardiff

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  configure.in  magic-touch.sh  pardiff.kdevprj  pardiff.lsm
build-VS2019/: pardiff.sln
build-VS2019/pardiff/: pardiff.vcxproj  pardiff.vcxproj.filters
build-VS2022/: pardiff.sln
build-VS2022/pardiff/: pardiff.vcxproj  pardiff.vcxproj.filters
build-aux/: get-current-version  magic-touch.sh
pardiff/: Makefile.am  Makefile.in  parcdiff.c  pardiff.1  pardiff.c  pardiff.h  version.h
src/: Makefile.am  Makefile.in  diffp  diffp.1  pardiff.h
