dnl Process this file with autoconf to produce a configure script.

AC_INIT(pardiff,0.9.5)
AC_CONFIG_AUX_DIR(build-aux)
AC_CONFIG_SRCDIR(pardiff/pardiff.c)

AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile pardiff/Makefile)
