dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])

AC_INIT([pardiff],
        [m4_esyscmd([build-aux/get-current-version])],
        [],
        [pardiff],
        [https://github.com/kiyolee/pardiff.git])
AC_CONFIG_SRCDIR([pardiff/pardiff.c])

AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([1.16])

AM_CONFIG_HEADER([config.h])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT([Makefile pardiff/Makefile])
